update mouseover text

--- a/calculator.html
+++ b/calculator.html
@@ -88,17 +88,17 @@
 
   <table class=table2>
   <th colspan="3">Energy Generation</th>
-    <tr title="This value is how much electricity your farm consumes per year. If you typed in an answer, the value should be the same. If not, the electricity consumed is based on the number of cows on your farm. If this value does not seem accurate, please reload the page and try an estimate that is based on your electric bill."> 
+    <tr title="This is how much electricity your farm consumes per year. If you typed in an answer, the value should be the same. If not, the electricity consumed is based on the number of cows on your farm. If this value does not seem accurate, please refresh the page and try an estimate that is based on your electric bill."> 
     <td>Annual Electricity Consumption</td>
     <td><span id="result4"></span></td>
     <td>kWh/year</td>
   </tr>
-  <tr title="This value is the amount of electricity your solar panels with generate each year. This is the electricity consumed times the percentage of consumption that you want the solar panels to cover."> 
+  <tr title="This is the amount of electricity your solar panels with generate each year. This is the electricity consumed times the percentage of consumption that you want the solar panels to cover."> 
     <td>Annual Electricity Generation</td>
     <td><span id="result5"></span></td>
     <td>kWh/year</td>
   </tr>
-    <tr title="This value is an average of how much electricity your panels will generate per hour, based on the average number of peak sunlight hours per day in Michigan."> 
+    <tr title="This is an average of how much electricity your panels will generate per hour, based on the average number of peak sunlight hours per day in Michigan."> 
     <td>Hourly Solar Panel Generation</td>
     <td><span id="result6"></span></td>
     <td>kWh</td>
@@ -119,12 +119,12 @@
     <td><span id="result12"></span></td>
     <td><span id="result13"></span> Watt panels</td>
   </tr>
-  <tr title="The size of your solar panel array is the number of panels times the size of each panel."> 
+  <tr title="The size of your solar panel array is the number of panels times the size (Wattage) of each panel."> 
     <td>System Size</td>
     <td><span id="result14"></span></td>
     <td>Watts</td>
   </tr>
-    <tr title="This value is an estimate of how much it will cost to install your solar panel array. This value is based on the cost estimates provided by the NREL Cost Benchmarks 2021 "> 
+    <tr title="This value is an estimate of how much it will cost to install your solar panel array. This value is based on the cost estimates provided by the NREL Cost Benchmarks 2022 "> 
     <td>Cost of Installation</td>
     <td><span id="result15"></span></td>
     <td>dollars</td>
@@ -137,12 +137,12 @@
     <td><span id="result16"></span></td>
     <td>years</td>
   </tr>
-  <tr title="The net present value (NPV) is the present value of all benefits minus the present value of all costs over the lifespan of the panels. The lifespan of your solar panels is estimated to be 25 years. It is generally considered to be a good investment if your NPV is greater than 0."> 
+  <tr title="The net present value (NPV) is the present value of all benefits minus the present value of all costs over the lifespan of the panels. The lifespan of your solar panels is estimated to be 25 years. It is generally considered to be a good investment if your NPV is greater than zero."> 
     <td>Net Present Value</td>
     <td><span id="result17"></span></td>
     <td>dollars</td>
   </tr>
-    <tr title="The equivalent annual worth (EAW) looks at the lifetime of the solar panels, and estimates the benefits of your project each year. It is generally considered to be a good investment if your EAW is greater than 0."> 
+    <tr title="The equivalent annual worth (EAW) looks at the lifetime of the solar panels and estimates the benefits of your project each year. It is generally considered to be a good investment if your EAW is greater than 0."> 
     <td>Equivalent Annual Worth</td>
     <td><span id="result19"></span></td>
     <td>dollars</td>
@@ -179,12 +179,12 @@
     <td><span id="result25"></span></td>
     <td>years</td>
   </tr>
-      <tr title="Payment made per year on the loan."> 
+      <tr title="This is the amount to be paid per year on the loan."> 
     <td>Annual Loan Payment</td>
     <td><span id="result26"></span></td>
     <td>dollars/year</td>
   </tr>
-        <tr title="Monthly payment on the loan."> 
+        <tr title="This is the amount to be paid per month on the loan. It is the annual loan payment divided by 12."> 
     <td>Monthly Loan Payment</td>
     <td><span id="result27"></span></td>
     <td>dollars/month</td>
