added body padding

--- a/calculator.html
+++ b/calculator.html
@@ -36,6 +36,7 @@
             installing solar panels on their farm structures and non-arable farmland.
         </p>
     </div>
+<div id="bodyOfCalculator">
     <div id="calculatorHeader">
         <h2>Solar Cost Calculator</h2>
         <p>Disclaimer: The calculator on this website is intended for educational purposes only. The calculations are meant to illustrate the economic impact of investing in photovoltatic technology, not to be official financial guidance. Actual returns and values will vary. Farmers interested in installing photovoltaic products should consult with a professional before making any purchase or investment. </p>
@@ -194,7 +195,7 @@
 
 <h3>Loan Schedule</h3>
 <canvas id="loanChart" width="300" height="100"></canvas>
-
+</div>
     <script src="calculator.js"></script>
 </body>
 </html>
