--- a/resources.html
+++ b/resources.html
@@ -38,6 +38,68 @@
         </div>
 
     <main>
+        <h1 class="resource-heading">Resources</h1>
+        <section class="resource-container">
+            <div class="resource-one">
+                <!-- resource option -->
+                <h2 class="resource-page">A farmer's guide to going solar</h2>
+                <!-- resource dropdown -->
+                <div class="resource-body">
+                    <p><a href="https://www.energy.gov/eere/solar/farmers-guide-going-solar ">A farmer's guide to going solar</a>
+                    </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-two">
+                <!-- resource option -->
+                <h2 class="resource-page">MSU Extension Webinar: Agriculture solar investment</h2>
+                <!-- resource dropdown -->
+                <div class="resource-body">
+                    <p><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/agriculture-solar-electric-investment">MSU Extension Webinar: Agriculture solar investment</a> </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-three">
+                <!-- resource option -->
+                <h2 class="resource-page">How solar energy can save money on your farm</h2>
+                <!-- resource dropdown -->
+                <div class="resource-body">
+                    <p><a href="https://www.canr.msu.edu/news/considering-solar-energy-it-can-yield-real-cost-savings-on-your-farm">How solar energy can save money on your farm</a></p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-four">
+                <!-- resource option -->
+                <h2 class="resource-page">Leasing land for solar projects</h2>
+                <!-- resource dropdown -->
+                <div class="resource-body">
+                    <p><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/leasing-land-for-solar-projects">Leasing land for solar projects</a>
+                    </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-five">
+                <!-- resource option -->
+                <h2 class="resource-page">MSU Extension: Black Star Farms solar power case study</h2>
+                <!-- resource dropdown -->
+                <div class="resource-body">
+                    <p><a href="https://www.canr.msu.edu/news/solar_power_case_study_black_star_farms">MSU Extension: Black Star Farms solar power case study</a>
+                    </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-six">
+                <!-- resource option -->
+                <h2 class="resource-page">MSU Extension: King Orchards solar power case study</h2>
+                <!-- resource dropdown -->
+                <div class="resource-body">
+                    <p><a href="https://www.canr.msu.edu/news/solar_power_case_study_king_orchards_fruit_co._llc">MSU Extension: King Orchards solar power case study</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
        <h1 class="resource-heading">Resources</h1>
         <h3>MSU Extension Links</h3>
         <ul class="resource-list">
