--- a/resources.html
+++ b/resources.html
@@ -26,6 +26,10 @@
         </div>
     </nav>
 
+    <main>
+        <div class="resources-header"></div>
+    </main> 
+
     <div class="main-header">
         <h2>Solar for Dairy</h2>
         <p>Solar for Dairy is a program designed to help dairy farmers in Michigan explore the potential of 
