update resources page

--- a/resources.html
+++ b/resources.html
@@ -47,11 +47,20 @@
         <section class="resource-container">
             <div class="resource-one">
                 <!-- resource option -->
-                <h2 class="resource-page">A farmer's guide to going solar</h2>
+                <h2 class="resource-page">How does solar work?</h2>
                 <!-- resource dropdown -->
                 <div class="resource-body">
-                    <p><a href="https://www.energy.gov/eere/solar/farmers-guide-going-solar ">A farmer's guide to going solar</a>
+                    <p>This website by energy.gov explains how solar techology works, it provides detailed info about the following topics:
+                        <ul>
+                            <li>Solar energy 101</li>
+                            <li>Photovoltaics basics</li>
+                            <li>Concentrating solar-thermal power basics</li>
+                            <li>Systems integration basics</li>
+                            <li>Soft cost basics</li>
+                            <li>Going solar basics</li>
+                            <li>Solar industry basics</li>
                     </p>
+                    <p><a href="https://www.energy.gov/eere/solar/how-does-solar-work">Click here to access the website</a> </p>
                 </div>
             </div>
             <hr class="hr-line">
@@ -60,7 +69,15 @@
                 <h2 class="resource-page">MSU Extension Webinar: Agriculture solar investment</h2>
                 <!-- resource dropdown -->
                 <div class="resource-body">
-                    <p><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/agriculture-solar-electric-investment">MSU Extension Webinar: Agriculture solar investment</a> </p>
+                    <p>This webinar includes information on the following: </p>          
+                    <ul class=webinar>
+                    <li>Estimating system production</li>
+                    <li>Assessing system cost</li>
+                    <li>Forecasting the value of electricity</li>
+                    <li>Understanding incentives</li>
+                    <li>Conducting a financial analysis</li>
+                    <li>A photovoltaic solar example</li>
+                    </ul></p><p><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/agriculture-solar-electric-investment">Click here to access the webinar</a> </p>
                 </div>
             </div>
             <hr class="hr-line">
@@ -69,36 +86,72 @@
                 <h2 class="resource-page">How solar energy can save money on your farm</h2>
                 <!-- resource dropdown -->
                 <div class="resource-body">
-                    <p><a href="https://www.canr.msu.edu/news/considering-solar-energy-it-can-yield-real-cost-savings-on-your-farm">How solar energy can save money on your farm</a></p>
+                    <p>This article from MSU Extension includes farm examples of the potential savings that can occur from solar energy systems. It looks at the annual cost savings through reducing the cost of electricity on your farms.</p>
+                    <p><a href="https://www.canr.msu.edu/news/considering-solar-energy-it-can-yield-real-cost-savings-on-your-farm">Click here to read the article</a></p>
                 </div>
             </div>
             <hr class="hr-line">
             <div class="resource-four">
                 <!-- resource option -->
-                <h2 class="resource-page">Leasing land for solar projects</h2>
+                <h2 class="resource-page">Government funding for solar projects</h2>
                 <!-- resource dropdown -->
                 <div class="resource-body">
-                    <p><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/leasing-land-for-solar-projects">Leasing land for solar projects</a>
+                    <p>MSU Extension wrote an article on government programs, and how they can reduce the installation costs of your solar energy system. </p><p><a href="https://www.canr.msu.edu/news/you-can-afford-solar-system">Click here to access the article</a>
                     </p>
                 </div>
             </div>
             <hr class="hr-line">
             <div class="resource-five">
                 <!-- resource option -->
-                <h2 class="resource-page">MSU Extension: Black Star Farms solar power case study</h2>
+                <h2 class="resource-page">Leasing land for solar projects</h2>
                 <!-- resource dropdown -->
                 <div class="resource-body">
-                    <p><a href="https://www.canr.msu.edu/news/solar_power_case_study_black_star_farms">MSU Extension: Black Star Farms solar power case study</a>
+                    <p>Have companies approached you asking to lease your land for solar projects? Are you unsure if this is a sound decision? MSU Extension created a webinar to educate farmers on this decision and answer any questions you may have. Here are the topics covered by the webinar:</p>
+                    <ul class=webinar>
+                        <li>Context for solar energy development on Michigan farmland</li>
+                        <li>Community vision for solar energy</li>
+                        <li>Zoning approaches</li>
+                        <li>Siting considerations for utility-scale solar</li>
+                        <li>Integrating solar with existing ag systems</li>
+                        <li>Understanding solar energy lease agreements</li>
+                        <li>Taxation guidance including impact of PA 116</li>
+                        </ul>
+                    <p><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/leasing-land-for-solar-projects">Click here to access the webinar</a>
                     </p>
+                    <p>More questions about solar energy lease agreement considerations?</p>
+                    <p><a href="https://www.canr.msu.edu/videos/solar-energy-lease-agreement-considerations">Watch this video from MSU Extension</a></p>
                 </div>
             </div>
             <hr class="hr-line">
             <div class="resource-six">
                 <!-- resource option -->
+                <h2 class="resource-page">MSU Extension: Black Star Farms solar power case study</h2>
+                <!-- resource dropdown -->
+                <div class="resource-body">
+                    <p>Black Star Farms is a winery and vineyard near Suttons Bay, MI. It has over 300 acres of grapes, a forest management program, and a petting zoo. Black Star Farms installed a fixed, ground-mounted solar array as well as made some other changes toward efficiency. See the case study for information about the solar array, the economics of it, and their opinions on the process.</p>
+                    <p><a href="https://www.canr.msu.edu/news/solar_power_case_study_black_star_farms">Click here to access Black Star Farms' case study</a>
+                    </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-seven">
+                <!-- resource option -->
                 <h2 class="resource-page">MSU Extension: King Orchards solar power case study</h2>
                 <!-- resource dropdown -->
                 <div class="resource-body">
-                    <p><a href="https://www.canr.msu.edu/news/solar_power_case_study_king_orchards_fruit_co._llc">MSU Extension: King Orchards solar power case study</a>
+                    <p>King Orchards Fruit Co is located in Antrim County, MI. It grows 400 acres of cherries, apples, peaches, pears, apricots, raspberries, plums, and nectarines. They installed a fixed, ground-mounted solar array in 2015. Read their case study to learn about their level of involvement in the process, the economics of the project, and their opinions on the process. </p>
+                    <p><a href="https://www.canr.msu.edu/news/solar_power_case_study_king_orchards_fruit_co._llc">Click here to access King Orchards case study</a>
+                    </p>
+                </div>
+            </div>
+            <hr class="hr-line">
+            <div class="resource-eight">
+                <!-- resource option -->
+                <h2 class="resource-page">Agrivoltaics: A farmer's guide to going solar</h2>
+                <!-- resource dropdown -->
+                <div class="resource-body">
+                    <p> This guide provided by energy.gov covers the basics of agrivoltaics. Agrivoltaics combines solar panels with other on-farm purposes, such as providing shade to farm animals or allowing sheep to graze between the panels. </p>
+                    <p><a href="https://www.energy.gov/eere/solar/farmers-guide-going-solar ">Click here to access the guide</a>
                     </p>
                 </div>
             </div>
