after 25 years faq

--- a/questions.html
+++ b/questions.html
@@ -94,10 +94,10 @@
             <hr class="hr-line">
             <div class="faq-four">
                 <!-- faq question -->
-<h2 class="faq-page">Solar energy lease agreement considerations </h2>
+<h2 class="faq-page">What happens after panels outlive their useful life? </h2>
                 <!-- faq answer -->
                 <div class="faq-body">
-                    <p><a href="https://www.canr.msu.edu/videos/solar-energy-lease-agreement-considerations">Watch this video from MSU Extension</a></p>
+                    <p>After 25 years, the efficiency of solar panels is expected to have declined to about 87.5% of its original capacity. They will likely still be able to generate electricity, just at a reduced rate.</p>
                 </div>
             </div>
         </section>
