fix graph on phone attempt

--- a/calculator.html
+++ b/calculator.html
@@ -194,7 +194,7 @@
 
 
 <h3>Loan Schedule</h3>
-<canvas id="loanChart" width="300" height="100"></canvas>
+<canvas id="loanChart"></canvas>
 </div>
     <script src="calculator.js"></script>
 </body>
