--- a/calculator.html
+++ b/calculator.html
@@ -165,27 +165,27 @@
 
 <table class=table5>
   <th colspan="5">Loan Information</th>
-    <tr class="table-row" title="Loan principle is the amount borrowed for the loan."> 
+    <tr title="Loan principle is the amount borrowed for the loan."> 
     <td>Loan Amount (Principal)</td>
     <td><span id="result23"></span></td>
     <td>dollars</td>
   </tr>
-  <tr class="table-row" title="If you did not insert an interest rate, the default value is 5.34%. This number was several loan options averaged out. This value can be edited using the form at the top of this page."> 
+  <tr title="If you did not insert an interest rate, the default value is 5.34%. This number was several loan options averaged out. This value can be edited using the form at the top of this page."> 
     <td>Loan Interest Rate</td>
     <td><span id="result24"></span></td>
     <td>%</td>
   </tr>
-    <tr class="table-row" title="Duration of the loan / how many years it will take to pay off the loan. Default value is 25 years, or the lifetime of the solar panels. This value can be edited using the form at the top of this page."> 
+    <tr title="Duration of the loan / how many years it will take to pay off the loan. Default value is 25 years, or the lifetime of the solar panels. This value can be edited using the form at the top of this page."> 
     <td>Time to Pay Off</td>
     <td><span id="result25"></span></td>
     <td>years</td>
   </tr>
-      <tr class="table-row" title="This is the amount to be paid per year on the loan."> 
+      <tr title="This is the amount to be paid per year on the loan."> 
     <td>Annual Loan Payment</td>
     <td><span id="result26"></span></td>
     <td>dollars/year</td>
   </tr>
-        <tr class="table-row" title="This is the amount to be paid per month on the loan. It is the annual loan payment divided by 12."> 
+        <tr title="This is the amount to be paid per month on the loan. It is the annual loan payment divided by 12."> 
     <td>Monthly Loan Payment</td>
     <td><span id="result27"></span></td>
     <td>dollars/month</td>
