cash flow chart dimensions

--- a/calculator.html
+++ b/calculator.html
@@ -158,7 +158,9 @@
 
 
 <h3>Cumulative Cash Flow Over the Lifetime of the Solar Panels</h3>
-<canvas id="cashFlowChart" width="300" height="100"></canvas>
+<div id="cashFlowChartContainer">
+<canvas id="cashFlowChart"></canvas>
+</div>
 
 <h3>Comparison of Different Federal Tax Credit Rates (percent of installation cost)</h3>
 <canvas id="taxCreditCashFlowChart" style="width: 100%;"></canvas>
