--- a/calculator.html
+++ b/calculator.html
@@ -196,7 +196,7 @@
 
 
 <h3>Loan Schedule</h3>
-<div id="loanChartContainer">
+<div class="loanChartContainer">
   <canvas id="loanChart"></canvas>
 </div>
 
