--- a/calculator.html
+++ b/calculator.html
@@ -163,7 +163,9 @@
 </div>
 
 <h3>Comparison of Different Federal Tax Credit Rates (percent of installation cost)</h3>
-<canvas id="taxCreditCashFlowChart" style="width: 100%;"></canvas>
+<div id="taxChartContainer">
+  <canvas id="taxCreditCashFlowChart" style="width: 100%;"></canvas>
+</div>
 
 <table class=table5>
   <th colspan="5">Loan Information</th>
