--- a/calculator.html
+++ b/calculator.html
@@ -69,7 +69,7 @@
 <p>For more information about each value, hover over a row in the table!</p>
 <div class="table-container1">
 <table class="table1">
-  <th colspan="3">User Input</th>
+  <tr><th colspan="3">User Input</th></tr>
   <tr title="The number of cows is used to determine how much energy your farm needs to generate per year."> 
     <td>Number of Cows</td>
     <td><span id="result1"></span></td>
@@ -88,7 +88,7 @@
   </table>
 
   <table class=table2>
-  <th colspan="3">Energy Generation</th>
+  <tr><th colspan="3">Energy Generation</th></tr>
     <tr title="This is how much electricity your farm consumes per year. If you typed in an answer, the value should be the same. If not, the electricity consumed is based on the number of cows on your farm. If this value does not seem accurate, please refresh the page and try an estimate that is based on your electric bill."> 
     <td>Annual Electricity Consumption</td>
     <td><span id="result4"></span></td>
@@ -109,7 +109,7 @@
 
 <div class="table-container2">
 <table class=table3>
-  <th colspan="4">System Specifications</th>
+  <tr><th colspan="3">System Specifications</th></tr>
       <tr title="Panel configuration is the square footage that your solar panel array will use on your roof and/or non-arable land."> 
     <td>Total Panel Configuration</td>
     <td><span id="result11"></span></td>
@@ -132,7 +132,7 @@
   </tr>
   </table>
 <table class=table4>
-  <th colspan="4">Economic Evaluation Criteria</th>
+  <tr><th colspan="3">Economic Evaluation Criteria</th></tr>
     <tr title="The payback period is the time it takes for the project to generate enough benefits each year to cover its cost of installation. In this case, the benefits are your annual savings based on what you would normally pay for electricity."> 
     <td>Payback Period</td>
     <td><span id="result16"></span></td>
@@ -168,7 +168,7 @@
 </div>
 
 <table class=table5>
-  <th colspan="5">Loan Information</th>
+  <tr><th colspan="3">Loan Information</th></tr>
     <tr title="Loan principle is the amount borrowed for the loan."> 
     <td>Loan Amount (Principal)</td>
     <td><span id="result23"></span></td>
